<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">LittleRubbish MusicPlayer</string>

    <string name="title_activity_welcome">MusicPlayer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Music Player</string>

    <string name="widget_button_open_musicManager_text">Open</string>
    <string name="getSongImageAndLrc">Get cover and lyrics</string>
    <string name="popUpWindow_play_mode_name">playMode</string>
    <string name="pup_play_close_text_view">Close</string>

    <string name="tab_menu_yuncun">Yun Cun</string>
    <string name="my_music">My Music</string>
    <string name="search_music">Search Music</string>
    <string name="tab_menu_video">Video</string>
    <string name="tab_menu_found">Explore</string>
    <string name="tab_menu_albums">My</string>
    <string name="tab_menu_account">Account</string>

    <!--bluetooth-->
    <!--  BluetoothChat -->
    <string name="send_message">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="sample_show_log">Log Show Widget</string>
    <string name="sample_hide_log">Hide Log</string>
    <string name="intro_message">
    This application allows two Android devices to carry out two-way text chat over
        Bluetooth. It demonstrates all the fundamental Bluetooth API capabilites, such as:
        (1) Scanning for other Bluetooth devices
        (2) Querying the local Bluetooth adapter for paired Bluetooth devices
        (3) Establishing RFCOMM channels/sockets
        (4) Connecting to a remote device
        (5) Transfering data over Bluetooth</string>
    <string name="file_transfer">File Transfer</string>


</resources>
